# Summit

./: .gitignore  README.md  Research idea for the LLM improvement. It must be a detailed plan with concrete hypotheses and experiments..md  main.py  pyproject.toml  summit.drawio
discussions/: best_crypto_trading_strategy_for_the_quickest_enrichment.md  invent_new_coffee_drink_that_was_never_served.md  permacomputing_as_a_threat_to_humanity_and_progress.md  research_idea_for_the_llm_improvement._it_must_be_a_detailed_plan_with_concrete_hypotheses_and_experiments..md  was_the_harry,_main_character_of_the_steppen_wolf_(hesse),_right_indeed?.md
summit/: discussion.py  prompts.py  web.py
summit/templates/: base.html  discussion.html  index.html  new_discussion.html
