[project]
name = "summit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "langchain[openai]>=0.3.23",
    "langgraph>=0.3.27",
    "langsmith>=0.3.28",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "flask>=3.0.0",
]
